<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2014-2015 Artem Yankovskiy (artemyankovskiy@gmail.com).
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_timezone"
        android:summary="@string/settings_internetTimeZone_message"
        android:title="@string/settings_internetTimeZone_title" />

    <PreferenceCategory android:title="@string/settings_display_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_24HourMode"
            android:summary="@string/settings_24HourMode_message"
            android:title="@string/settings_24HourMode_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_tip"
            android:summary="@string/settings_showTip_message"
            android:title="@string/settings_showTip_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_showSunriseAzimuth"
            android:summary="@string/settings_showSunriseAzimuth_message"
            android:title="@string/settings_sunrise_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_showSunsetAzimuth"
            android:summary="@string/settings_showSunsetAzimuth_message"
            android:title="@string/settings_sunset_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_showAltitude"
            android:summary="@string/settings_showAltitude_message"
            android:title="@string/settings_showAltitude_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_color_title"
        android:title="@string/settings_colors_title">
        <net.margaritov.preference.colorpicker.ColorPickerPreference xmlns:app="http://schemas.android.com/apk/res-auto"
            android:defaultValue="@color/sun_color"
            android:key="pref_sunColor"
            android:summary="@string/settings_sunColor_message"
            android:title="@string/settings_sun_title"
            app:dialogTitle="@string/settings_sun_title" />
        <net.margaritov.preference.colorpicker.ColorPickerPreference xmlns:app="http://schemas.android.com/apk/res-auto"
            android:defaultValue="@color/sunrise_color"
            android:key="pref_sunriseColor"
            android:summary="@string/settigns_sunriseColor_message"
            android:title="@string/settings_sunrise_title"
            app:dialogTitle="@string/settings_sunrise_title" />
        <net.margaritov.preference.colorpicker.ColorPickerPreference xmlns:app="http://schemas.android.com/apk/res-auto"
            android:defaultValue="@color/sunset_color"
            android:key="pref_sunsetColor"
            android:summary="@string/settings_sunsetColor_message"
            android:title="@string/settings_sunset_title"
            app:dialogTitle="@string/settings_sunset_title" />
    </PreferenceCategory>

</PreferenceScreen>