<!--
  Copyright (C) 2014-2015 Artem Yankovskiy (artemyankovskiy@gmail.com).
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_item_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/item_saveLocation"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/saveLocationDialog_title"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_dateTime"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:title="@string/change_time"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/item_map_normal"
        android:title="@string/mapType_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_map_terrain"
        android:title="@string/mapType_terrain"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_map_hybrid"
        android:title="@string/mapType_hybrid"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_map_satellite"
        android:title="@string/mapType_satellite"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_timeZone"
        android:title="@string/menu_item_timeZone"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_settings"
        android:title="@string/menu_item_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_rate"
        android:title="@string/menu_item_rate"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_feedback"
        android:title="@string/menu_item_feedback"
        app:showAsAction="never" />
</menu>