<!--
  Copyright (C) 2014-2015 Artem Yankovskiy (artemyankovskiy@gmail.com).
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/map_info_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:visibility="gone"
            card_view:cardBackgroundColor="@color/light_grey"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp">

                <RelativeLayout
                    android:id="@+id/map_sunrise"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@color/sunrise_color"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/map_sunrise_tv"
                        style="@style/InfoPanelTv.Head" />

                    <TextView
                        style="@style/InfoPanelTv.Desc"
                        android:layout_below="@+id/map_sunrise_tv"
                        android:text="@string/sunrise_time" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/map_sun"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/map_sunrise"
                    android:layout_marginBottom="8dp"
                    android:background="@color/sun_color"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/map_sun_tv"
                        style="@style/InfoPanelTv.Head" />

                    <TextView
                        style="@style/InfoPanelTv.Desc"
                        android:layout_below="@+id/map_sun_tv"
                        android:text="@string/sun_time" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/map_sunset"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/map_sun"
                    android:layout_marginBottom="8dp"
                    android:background="@color/sunset_color"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/map_sunset_tv"
                        style="@style/InfoPanelTv.Head" />

                    <TextView
                        style="@style/InfoPanelTv.Desc"
                        android:layout_below="@+id/map_sunset_tv"
                        android:text="@string/sunset_time" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/map_altitude"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/map_sunset"
                    android:layout_marginBottom="8dp"
                    android:background="@color/altitude_color"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/map_altitude_tv"
                        style="@style/InfoPanelTv.Head" />

                    <TextView
                        style="@style/InfoPanelTv.Desc"
                        android:layout_below="@+id/map_altitude_tv"
                        android:text="@string/sun_altitude" />
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <ListView
        android:id="@+id/location_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff"
        android:choiceMode="singleChoice"
        android:divider="#808080"
        android:dividerHeight="1dp" />

</android.support.v4.widget.DrawerLayout>
